--- a/index.css
+++ b/index.css
@@ -1,1 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html,body {
+    width:100%;
+    height:100%;
+  }
+
+/* NavBar */
+li, a, button {
+    font-family: 'Roboto', serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #edf0f1;
+    text-decoration: none;
+}
+
+header {
+    background-color: #262626;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10%;
+    word-spacing: 15px;
+}
+
+.logo {
+    cursor : pointer;
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0px 20p;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: #9B9B9B;
+}
+
+button {
+    padding: 9px 25px; 
+    background-color: #6592E6;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition : all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: #4952C2;
+}
+
+
+/*Center Logo*/
+
+.centerlogo {
+    display: block;
+    margin: 0 auto;
+    margin-top: 7.5rem;
+    width: 700px;
+}
 
